<resources>
    <!--  GENERAL  -->
    <string name="app_name">Collectivity</string>

    <!--  TOOLBAR  -->
    <string name="action_toolbar_search_title">Search</string>
    <string name="action_toolbar_sort_title">Sort</string>
    <string name="action_toolbar_save_title">Save</string>
    <string name="empty" />
    <string name="action_dropdown_name">Name</string>
    <string name="action_dropdown_description">Beschreibung</string>
    <string name="action_dropdown_ean">EAN</string>
    <string name="action_dropdown_value">Wert</string>
    <string name="action_dropdown_insertiondate">Einfügedatum</string>
    <string name="action_dropdown_buydate">Kaufdatum</string>
    <string name="action_dropdown_condition">Zustand</string>
    <string name="action_dropdown_position">Position</string>

    <!--  TEXTFIELD  -->
    <string name="textfield_name">Name</string>
    <string name="textfield_description">Beschreibung</string>
    <string name="textfield_search">Suchbegriff</string>
    <string name="Tags">Tags</string>
    <string name="missing_name">Bitte geben sie einen Namen ein</string>
    <string name="textfield_value">Wert</string>
    <string name="spinner_amount_hint">Anzahl:</string>
    <string name="textfield_position">Position</string>
    <string name="missing_position">Bitte geben sie eine Position ein</string>
    <string name="action_dropdown_amount">Anzahl</string>
    <string name="textfield_tags">Tags / Schlagwörter</string>
    <string name="calendarview_buy_day_hint">Kaufdatum</string>

    <string-array name="spinner_amount">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
