<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="48dp">

        <EditText
            android:id="@+id/textfield_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/textfield_name"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/spinner_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/textfield_name">

            <TextView
                android:id="@+id/spinner_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spinner_amount_hint"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/spinner_amount" />
        </LinearLayout>

        <EditText
            android:id="@+id/textfield_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/textfield_description"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/spinner_layout" />

        <!--   TODO: EAN & ICON    -->

        <EditText
            android:id="@+id/textfield_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/textfield_value"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/textfield_description" />

        <!--   TODO: hint   -->

        <CalendarView
            android:id="@+id/calendarview_buy_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textfield_value" />

        <!--    TODO: Tag    -->

        <Spinner
            android:id="@+id/spinner_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/calendarview_buy_date" />

        <EditText
            android:id="@+id/textfield_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/textfield_position"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/spinner_condition" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>