<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="48dp">

        <EditText
            android:id="@+id/textfield_name"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/textfield_name"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/textfield_description"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/textfield_description"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textfield_name" />

        <EditText
            android:id="@+id/textfield_tags"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/textfield_tags"
            android:importantForAutofill="no"
            android:inputType="text"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textfield_description" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>